--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="tab_three_text">Perfil</string>
     <string name="content_three">Contenido tres</string>
     <string name="image">Thumbnail</string>
+    <string name="app_id">138858016269838</string>
 
 </resources>
