[43417921] Como Usuario quiero hacer login con mi cuenta de facebook. Para que no tenga que recordar otro usuario y contraseña extra.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="tab_three_text">Perfil</string>
     <string name="content_three">Contenido tres</string>
     <string name="image">Thumbnail</string>
+    <string name="get_started">Para empezar entra con Facebook.</string>
+    <string name="welcome">Bienvenido, has iniciado sesión.</string>
     <string name="app_id">138858016269838</string>
 
 </resources>
