--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="tab_three_text">Perfil</string>
     <string name="content_three">Contenido tres</string>
     <string name="image">Thumbnail</string>
-    <string name="get_started">Para empezar entra con Facebook.</string>
+    <string name="get_started">Entra con Facebook, para comenzar.</string>
     <string name="welcome">Bienvenido, has iniciado sesión.</string>
     <string name="app_id">138858016269838</string>
 
