[43534599] Como Usuario quiero hacer logout de mi cuenta de facebook.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="get_started">Entra con Facebook, para comenzar.</string>
     <string name="welcome">Bienvenido, has iniciado sesión.</string>
     <string name="app_id">138858016269838</string>
+    <string name="settings">Configuración</string>
 
 </resources>
