--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">Rango</string>
     <string name="hello_world">Hola Mundo</string>
+    <string name="test">Prueba</string>
     <string name="menu_settings">Settings</string>
     <string name="tab_one_text">Amigos</string>
     <string name="tab_one_no_friends_on_list">Invita a tus amigos</string>
@@ -17,5 +18,7 @@
     <string name="app_id">138858016269838</string>
     <string name="settings">Configuración</string>
     <string name="logout_text">Logout</string>
+    <string name="action_people">With whom?</string>
+	<string name="action_people_default">Select friends</string>
 
 </resources>
