--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="logout_text">Logout</string>
     <string name="action_people">With whom?</string>
 	<string name="action_people_default">Select friends</string>
+	<string name="menu_invite_friends">Invitar</string>
+	<string name="invite_friends_message">Habla por radio con tus amigos</string>
 
 </resources>
