[45202357] Hacer el rediseño de la vista chat

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,6 +20,6 @@
 	<string name="action_people_default">Select friends</string>
 	<string name="menu_invite_friends">Invitar</string>
 	<string name="invite_friends_message">Habla por radio con tus amigos</string>
-	<string name="holdToTalk">Pulsar para hablar</string>
+	<string name="holdToTalk">Mantener presionado para hablar</string>
 
 </resources>
