[45898465] Rediseño del app

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="content_two">Contenido dos</string>
     <string name="tab_user_profile">Perfil</string>
     <string name="image">Thumbnail</string>
-    <string name="get_started">Entra con Facebook, para comenzar.</string>
+    <string name="get_started">Entra con Facebook para comenzar.</string>
     <string name="welcome">Bienvenido, has iniciado sesión.</string>
     <string name="app_id">138858016269838</string>
     <string name="settings">Configuración</string>
