--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="menu_settings">Settings</string>
     <string name="tab_friends_list">Amigos</string>
     <string name="no_friends_on_list">Invita a tus amigos</string>
-    <string name="tab_two_text">Chats</string>
+    <string name="tab_two_text">Avisos</string>
     <string name="content_two">Contenido dos</string>
     <string name="tab_user_profile">Perfil</string>
     <string name="image">Thumbnail</string>
@@ -22,5 +22,10 @@
 	<string name="invite_friends_message">Habla por radio con tus amigos</string>
 	<string name="holdToTalk">Mantener presionado para hablar</string>
 	<string name="calling">Llamando...</string>
+	
+	<string-array name="friend_request_options">
+	    <item>Acceptar</item>
+	    <item>Rechazar</item>
+	</string-array>
 
 </resources>
