--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="menu_settings">Settings</string>
     <string name="tab_friends_list">Amigos</string>
     <string name="no_friends_on_list">Invita a tus amigos</string>
-    <string name="tab_two_text">Solicitudes</string>
+    <string name="tab_two_text">Reciente</string>
     <string name="content_two">Contenido dos</string>
     <string name="tab_user_profile">Perfil</string>
     <string name="image">Thumbnail</string>
@@ -18,12 +18,17 @@
     <string name="logout_text">Logout</string>
     <string name="action_people">With whom?</string>
 	<string name="action_people_default">Select friends</string>
+	
+	<!-- MENU -->
 	<string name="menu_invite_friends">Invitar</string>
+	<string name="menu_notifications">Avisos</string>
+	
 	<string name="invite_friends_message">Habla por radio con tus amigos</string>
 	<string name="holdToTalk">Mantener presionado para hablar</string>
 	<string name="calling">Llamando&#8230;</string>
 	<string name="confirm_friend_request">Confirmar</string>
 	<string name="decline_friend_request">Ahora no</string>
 	<string name="no_friend_requests">No tienes solicitudes de amistad</string>
+	<string name="requests_list_title">Solicitudes de Amistad</string>
 	
 </resources>
