--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="menu_settings">Settings</string>
     <string name="tab_friends_list">Amigos</string>
     <string name="no_friends_on_list">Invita a tus amigos</string>
-    <string name="tab_two_text">Reciente</string>
+    <string name="tab_calls_list">Reciente</string>
     <string name="content_two">Contenido dos</string>
     <string name="tab_user_profile">Perfil</string>
     <string name="image">Thumbnail</string>
