[45292443] Como Usuario, quiero tener una lista de conversaciones recientes.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,6 +29,7 @@
 	<string name="confirm_friend_request">Confirmar</string>
 	<string name="decline_friend_request">Ahora no</string>
 	<string name="no_friend_requests">No tienes solicitudes de amistad</string>
+	<string name="no_calls_log">No tienes llamadas recientes</string>
 	<string name="requests_list_title">Solicitudes de Amistad</string>
 	
 </resources>
